tests/eval/bad/builtin-bech32-3.scilexp
(* Below string is an invalid bech32 address, the checksum is wrong. *)
let bech32str = "zil102n74869xnvdwq3yh8p0k9jjgtejruft268tg9" in
let prefix = "zil" in
builtin bech32_to_bystr20 prefix bech32str

